# mail_system

./: .gitignore  CMakeLists.txt  README.md  build.ps1  run.ps1  计网实践要求.txt
lib_mingw/: libcrypto.def  libmysql.def  libssl.def
scripts/: init_database.py
sql/: schema.sql
src/: main.cpp
src/core/: base64.cpp  base64.h  email.cpp  email.h  mime_decoder.cpp  mime_decoder.h  mime_encoder.cpp  mime_encoder.h
src/database/: db_connection.cpp  db_connection.h  db_manager.cpp  db_manager.h
src/network/: pop3_client.cpp  pop3_client.h  smtp_client.cpp  smtp_client.h  ssl_socket.cpp  ssl_socket.h  tcp_socket.cpp  tcp_socket.h
src/ui/: account_dialog.cpp  account_dialog.h  app_style.cpp  app_style.h  compose_dialog.cpp  compose_dialog.h  email_list_widget.cpp  email_list_widget.h  email_view_widget.cpp  email_view_widget.h  main_window.cpp  main_window.h  remote_image_text_browser.cpp  remote_image_text_browser.h
